--- a/jetty-learn/pom.xml
+++ b/jetty-learn/pom.xml
@@ -8,5 +8,26 @@
     <artifactId>jetty-learn</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <jetty.version>9.3.8.v20160314</jetty.version>
+    </properties>
+    <!-- Jetty9 -->
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-jmx</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
