--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     compile group: 'cglib', name:'cglib', version: '2.2.2'
     compile 'org.slf4j:slf4j-api:1.7.21'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.8'
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     testCompile group: 'junit', name: 'junit', version: '4.11'
