--- a/thrift-learn/build.gradle
+++ b/thrift-learn/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.apache.thrift', name: 'libthrift', version: '0.6.1'
+    compile group: 'org.apache.thrift', name: 'libthrift', version: '0.12.0'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
