--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.openjdk.jol', name:'jol-core', version: '0.9'
     compile group: 'cglib', name:'cglib', version: '2.2.2'
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'org.slf4j:slf4j-log4j12:1.7.21'
